--- a/gb/20/12/8/n12602741.md
+++ b/gb/20/12/8/n12602741.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fjdhch354/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fjdhch354/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fjdhch354/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fjdhch354/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fjdhch354/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【珍言真语】林建诚：有线台裁员 新闻自由不再</h2>
-<a href="https://git.io/JIR7I"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dep6yudto3kbo.cloudfront.net/T0nX7JM6c"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>前有线电视中国组资深记者林建诚接受大纪元《珍言真语》节目采访时表示，2018年离开有线电视的时候，已预计到香港整个新闻行业会转差，有线对于中国新闻的难度也会越来越大，但是他确实想不到会来的这么快、这么突然。（大纪元香港新闻中心）
 </h6>
 <hr>
 	<p>【大纪元2020年12月08日讯】（香港大纪元记者林慧真、梁珍报导）有线宽频12月1日调整架构，调职或裁减约一百人。其中新闻部《新闻刺针》全组及中国组助理采访主任黄丽萍等约40人突被裁，引发内部员工不满，中国新闻组遂决定总辞。</p>
-<p>有评论指，中共正趁美国大选之机，在香港明目张胆<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E4%BE%B5%E7%8A%AF%E4%BA%BA%E6%9D%83.md#1">侵犯人权</a>。此次管理层整治传媒并非开源节流，与之前DQ民主派议员变相解散立法会、随意抓捕判罪抗争者如出一辙。</p>
-<p>前有线电视中国组资深记者<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%9E%97%E5%BB%BA%E8%AF%9A.md#1">林建诚</a>接受大纪元《<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》节目采访时表示，2018年离开有线电视的时候，已预计到香港整个新闻行业会转差，有线对于中国新闻的难度也会越来越大，但是他确实想不到会来的这么快、这么突然。“就是换，一而再再而三地换”，“你会预计到会有下一波，一波一波会再来。”</p>
-<p><ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E6%96%B0%E9%97%BB%E8%87%AA%E7%94%B1.md#1">香港新闻自由</a>不复存在，不只是香港人的损失。“其实某种程度上来讲，更加是香港政府的损失，是中国政府的损失。”因为“需要不同的声音，将真实的情况讲出来，你才更加能够掌握政情，更加掌握这个国情。”而这一切预计的东西“被彻底地打破了”。</p>
+<p>有评论指，中共正趁美国大选之机，在香港明目张胆<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BE%B5%E7%8A%AF%E4%BA%BA%E6%9D%83.md#1">侵犯人权</a>。此次管理层整治传媒并非开源节流，与之前DQ民主派议员变相解散立法会、随意抓捕判罪抗争者如出一辙。</p>
+<p>前有线电视中国组资深记者<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%97%E5%BB%BA%E8%AF%9A.md#1">林建诚</a>接受大纪元《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》节目采访时表示，2018年离开有线电视的时候，已预计到香港整个新闻行业会转差，有线对于中国新闻的难度也会越来越大，但是他确实想不到会来的这么快、这么突然。“就是换，一而再再而三地换”，“你会预计到会有下一波，一波一波会再来。”</p>
+<p><ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%A6%99%E6%B8%AF%E6%96%B0%E9%97%BB%E8%87%AA%E7%94%B1.md#1">香港新闻自由</a>不复存在，不只是香港人的损失。“其实某种程度上来讲，更加是香港政府的损失，是中国政府的损失。”因为“需要不同的声音，将真实的情况讲出来，你才更加能够掌握政情，更加掌握这个国情。”而这一切预计的东西“被彻底地打破了”。</p>
 <h2>有线中国新闻组消失 难过与悲愤</h2>
-<p>“难过和痛心这个是外在的，内在就是觉得，很悲愤。”<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%9E%97%E5%BB%BA%E8%AF%9A.md#1">林建诚</a>估计，更难过的是现役中国组的同事，尤其是他的前上司司徒元先生，他一手培养了中国组，很多员工曾经在里面成长。</p>
+<p>“难过和痛心这个是外在的，内在就是觉得，很悲愤。”<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%9E%97%E5%BB%BA%E8%AF%9A.md#1">林建诚</a>估计，更难过的是现役中国组的同事，尤其是他的前上司司徒元先生，他一手培养了中国组，很多员工曾经在里面成长。</p>
 <p>对于管理层解释说架构要重组，因为疫情大家不够吃了，他表示看不出真的是要为节省资源而做的。</p>
 <p>“对于一个台来说，一个新闻部来说，几十人的工资，不是一个很重大的开支来的，尤其现在已经是有这么多的大财团在里面，以前就只是说九仓，现在已经有不同的财团，还有一些红色资本进来。对于一年花三亿多来说，完全不是一个什么问题。”</p>
 <p>他指出，突然解雇一些人节省资源、架构重组，而将一些最精锐的和最受欢迎的，具招牌的一个组别一刀切，明显是有别于一般的架构重组的动机。</p>
@@ -44,7 +44,7 @@
 <p>“在街上走不可能的，我们宁愿放弃这些所谓的好画面。而重要由他亲述他遭受了什么迫害、他现在的心境怎样、他怎样看整个的中国的民主发展，我觉得由他们这些遭受最大身体痛苦的人去说这些事，是远远比任何一些是已经出走了的人去说，我觉得是更有说服力，更加动人。”</p>
 <p>他强调，要了解中国，不只是看一些经济的数字，而要看人们日常的生活中发生了些什么，去挖掘大小事。在大陆网络世界里出现的潮语，也可以体现出中国有什么动静，比如“赵家人”一词，香港人是不知道的，要在中国大陆生活才体会得到。</p>
 <h2>香港旧环境彻底打碎 新闻工作应遍地开花</h2>
-<p>经历了2019年的反送中运动，大家看到了前线记者所面对的武装力量。<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%E6%B8%AF%E5%8C%BA%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">港区国安法</a>通过之后，林建诚认为，与其说由中国组记者教香港记者采访，不如说由现在前线记者教中国组的记者采访。</p>
+<p>经历了2019年的反送中运动，大家看到了前线记者所面对的武装力量。<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B8%AF%E5%8C%BA%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">港区国安法</a>通过之后，林建诚认为，与其说由中国组记者教香港记者采访，不如说由现在前线记者教中国组的记者采访。</p>
 <p>“2019年对整个新闻的采访是一个很大的破碎，所谓的破碎，就是将你旧有想的东西与你的环境，当时你所认识的环境的东西，你预计的东西是彻底打破了。”他指出，不能够将过去在中国大陆采访的一套，面对强大的什么什么、怎么样去冲锋陷阵，搬来今天的香港，已经不可同日而语。</p>
 <p>至于同样是派到中国大陆的记者，为什么有些东西有线能做到，其他人却做不到，他表示，归根还是看管理层愿不愿意投放资源，肯不肯放权给下面的记者，大胆去做这些事情，这一定是最重要的。他引用赵应春先生的话说，“你（记者）没有这些空间，你会飞也没有用。”</p>
 <p>新闻自由、法治，都是香港的核心价值，如今却容不了有线电视中国新闻组。林建诚说，并不是香港容纳不了他们，而是香港政府和中国政府容纳不了他们，“最大的问题始终来自政治层面上面，因为政治的环境不允许说真话的记者，不允许做实事的记者留在这里。”</p>
@@ -53,50 +53,49 @@
 <p>对于在香港还想找回真相的记者，在现在的政治环境下怎样做，他坦言，这是一个比较伤心的问题，很难给到一个准确的答案，而且现在世事变化超乎我们想像中的快。</p>
 <p>“随着网络的越来越发达，当你5G的时候呢，特别是现在经历过美国选举，你看到美国选举主流媒体都可以这样的，那你就会发现主流媒体所谓的公信力，原来也可以这样被质疑，并且是很值得去质疑的。这样其实反而是可以去助到一些已经有一些名声的记者，他们在一个自媒体里面去发挥。”</p>
 <p>他建议，未来的新闻工作者可以将一些新闻工作碎片化，即不要只是困在一两个主流的大媒体里面，而是大家在不同的自媒体里互相发挥。从现在的趋势看，是可行的。“其实这就是将一个饼，切碎、分散，在不同的层面，在不同的领域里面去做一些好新闻。”</p>
-<p>完整访问请观看《<ahref="https://github.com/fjdhch354/djy/blob/master/gb/tag/%e7%8f%8d%e8%a8%80%e7%9c%9f%e8%aa%9e.md#1">珍言真语</a>》节目。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://git.io/JIR7I"><img width="600" src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/EL9VoOM2PlE" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>完整访问请观看《<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%e7%8f%8d%e8%a8%80%e7%9c%9f%e8%aa%9e.md#1">珍言真语</a>》节目。</p>
+<p style="text-align: center;"><a src=""></a><a href="https://dep6yudto3kbo.cloudfront.net/T0nX7JM6c"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/EL9VoOM2PlE" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>责任编辑：李明#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/20/n12563897.md#1">【珍言真语】谈舞弊遭禁播 桑普直指华盛顿沼泽</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/22/n12567368.md#1">【珍言真语】金虹：美媒“自残” 与共党同路</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/25/n12574760.md#1">【珍言真语】李劼：正邪决战 美重打独立战争</a></li>
-<li><a href="https://github.com/fjdhch354/djy/blob/master/gb/20/11/26/n12577378.md#1">【珍言真语】张崑阳：痛心同伴陷囹圄 坚持抗争</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/22/n12567368.md#1">【珍言真语】金虹：美媒“自残” 与共党同路</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/25/n12574760.md#1">【珍言真语】李劼：正邪决战 美重打独立战争</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/11/26/n12577378.md#1">【珍言真语】张崑阳：痛心同伴陷囹圄 坚持抗争</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/30/n13748267.md#1">【珍言真语】杨颖宇：香港教育制度正被染红</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/9/n11101863.md#1" target="_blank">【征文】章阁：中共设风水乱局 破坏北京古城</a></li><li><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/16/n11191240.md#1" target="_blank">林辉：诬陷美国发动细菌战 毛周被打脸</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/14/n11587779.md#1" target="_blank">台北修炼心得交流会 法轮功学员谈身心改变</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12602463.md#1">【横河直播】翟东昇和美大选舞弊的中共因素</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12601574.md#1">【直播】美议员杯葛亚利桑那选举认证</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/11/11/n12541737.md#1">【思想领袖】博卡哈利：科技巨头窃取大选</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/6/n12599095.md#1">【大选更新12.6】白宫：全美存在统计异常</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/6/n12599402.md#1">威州邮递员指证：邮局下令更改选票邮戳日期</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/1/n12586853.md#1">在Costco买这11种圣诞节商品 实惠又应景</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12600656.md#1">Sana曾与确诊者请夏接触 TWICE全员接受检疫</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/6/n12599611.md#1">35岁徐佳莹幽默报喜：我刚刚生了一个孩子</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12600579.md#1">TWICE于MAMA获两奖 唱新歌登热搜与收视冠军</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/6/n12599069.md#1">卢广仲翻唱周董的歌 歌迷惊喜盼摘金曲歌王</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/5/n12598104.md#1">李翊君演唱会星光云集 黄子佼助阵献上惊喜</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12600354.md#1">神秘金属柱子如雨后春笋 英国小岛也出现了</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/3/n12594410.md#1">忧郁症有4大症状 怎样改善？治疗和饮食全图解</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12600868.md#1">史上首次 美太空人采收在外太空种植的萝卜</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/6/n12599786.md#1">大雪节气养生早睡晚起 3招保养心血管、增免疫</a></li>
-<li><a href="https://github.com/tpuolf3730/djy/blob/master/gb/20/12/7/n12600653.md#1">与妻子吵架想散心 义国男子竟走了450公里</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fjdhch354/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12602741.htm">【珍言真语】林建诚：有线台裁员 新闻自由不再</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/8/n12602741.htm">【珍言真语】林建诚：有线台裁员 新闻自由不再</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fjdhch354/djy/blob/master/gb/20/12/8/n12602741.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fjdhch354/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fjdhch354/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fjdhch354/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/12/8/n12602741.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
